--- a/src/webapp_comms/src/gamepad-test.html
+++ b/src/webapp_comms/src/gamepad-test.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
-    
+    <h1>GAMEPAD STUFF</h1>
+    <div id="container"></div>
+   <script src="gamepad.js"></script> 
+   <script>
+        // let obj;
+        let container = document.getElementById("container");
+        const obj = {name: "John", age: 30, city: "New York"};
+        const myJSON = JSON.stringify(obj);
+        console.log(myJSON);
+   </script>
+   <p id="jsonOutput"></p>
 </html>
