fix controller parsing and make visual output on test html

--- a/src/webapp_comms/src/gamepad-test.html
+++ b/src/webapp_comms/src/gamepad-test.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <h1>GAMEPAD STUFF</h1>
-    <div id="container"></div>
+    <div id="container">
+        <p id="gamepad-text"></p>
+    </div>
    <script src="gamepad.js"></script> 
    <script>
         // let obj;
